--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "@mishkat/remnawave-sdk",
+  "name": "@webzaytsev/remnawave-sdk",
   "version": "1.2.2",
-  "author": "Mishkat <github.com/mishkatik>",
-  "homepage": "https://github.com/mishkatik/remnawave-sdk",
+  "author": "WEBzaytsev <github.com/WEBzaytsev>",
+  "homepage": "https://github.com/WEBzaytsev/remnawave-sdk",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mishkatik/remnawave-sdk"
+    "url": "https://github.com/WEBzaytsev/remnawave-sdk"
   },
   "description": "SDK for Remnawave API",
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "files": [
@@ -23,22 +30,33 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "bun run clean && bun run tsc",
-    "prepublish": "bun run build",
+    "build": "tsup",
+    "prepublishOnly": "bun run build",
     "lint": "bun x @biomejs/biome check",
-    "lint:fix": "bun run lint --fix"
+    "lint:fix": "bun run lint --fix",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "remnawave",
     "sdk",
     "api"
   ],
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "tsup": "^8.5.1"
   },
   "peerDependencies": {
-    "typescript": "^5.9.3"
+    "typescript": "^5.0.0"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@remnawave/backend-contract": "2.2.32",
